[package]
name = "subtensor-chain-extensions"
version = "0.1.0"
edition.workspace = true
authors = ['Francisco Silva <francisco@taostats.io>']
homepage = "https://taostats.io/"
publish = false
repository = "https://github.com/opentensor/subtensor/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
frame-support.workspace = true
frame-system.workspace = true
log.workspace = true
sp-core.workspace = true
sp-io.workspace = true
sp-runtime.workspace = true
sp-std.workspace = true
codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
subtensor-runtime-common.workspace = true
pallet-contracts.workspace = true
pallet-subtensor.workspace = true
pallet-subtensor-swap.workspace = true
pallet-balances.workspace = true
pallet-scheduler.workspace = true
pallet-preimage.workspace = true
pallet-timestamp.workspace = true
pallet-crowdloan.workspace = true
pallet-subtensor-utility.workspace = true
pallet-subtensor-proxy.workspace = true
pallet-drand.workspace = true
subtensor-swap-interface.workspace = true
num_enum.workspace = true
substrate-fixed.workspace = true

[lints]
workspace = true

[features]
default = ["std"]
std = [
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"codec/std",
	"scale-info/std",
	"subtensor-runtime-common/std",
	"pallet-contracts/std",
	"pallet-subtensor/std",
	"pallet-subtensor-swap/std",
	"pallet-balances/std",
	"pallet-scheduler/std",
	"pallet-preimage/std",
	"pallet-timestamp/std",
	"pallet-crowdloan/std",
	"pallet-subtensor-utility/std",
	"pallet-subtensor-proxy/std",
	"pallet-drand/std",
	"subtensor-swap-interface/std",
	"num_enum/std",
	"substrate-fixed/std",
]
