[package]
name = "subtensor-runtime-common"
version = "0.1.0"
edition.workspace = true
authors = ["Opentensor Foundation <https://github.com/opentensor/>"]
homepage = "https://opentensor.ai/"
publish = false
repository = "https://github.com/opentensor/subtensor/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, features = ["derive"] }
frame-support.workspace = true
num-traits = { workspace = true, features = ["libm"] }
scale-info.workspace = true
serde.workspace = true
sp-arithmetic.workspace = true
sp-core.workspace = true
sp-runtime.workspace = true
sp-rpc = { workspace = true, optional = true }
substrate-fixed.workspace = true
subtensor-macros.workspace = true
runtime-common.workspace = true
approx = { workspace = true, optional = true }

[lints]
workspace = true

[features]
default = ["std"]
approx = ["dep:approx"]
fast-runtime = []
std = [
	"codec/std",
	"frame-support/std",
	"num-traits/std",
	"scale-info/std",
	"serde/std",
	"sp-arithmetic/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-rpc",
	"substrate-fixed/std",
	"runtime-common/std"
]
