[package]
name = "subtensor-runtime-common"
version = "0.1.0"
edition.workspace = true
authors = ["Opentensor Foundation <https://github.com/opentensor/>"]
homepage = "https://opentensor.ai/"
publish = false
repository = "https://github.com/opentensor/subtensor/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, features = ["derive"] }
environmental.workspace = true
frame-support.workspace = true
scale-info.workspace = true
serde.workspace = true
sp-core.workspace = true
sp-runtime.workspace = true
substrate-fixed.workspace = true
subtensor-macros.workspace = true
runtime-common.workspace = true
approx = { workspace = true, optional = true }

[lints]
workspace = true

[features]
default = ["std"]
approx = ["dep:approx"]
fast-runtime = []
std = [
	"codec/std",
	"environmental/std",
	"frame-support/std",
	"scale-info/std",
	"serde/std",
	"sp-core/std",
	"sp-runtime/std",
	"substrate-fixed/std",
	"runtime-common/std"
]
