[package]
name = "eco-tests"
version = "0.1.0"
edition = "2024"
publish = false

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(substrate_runtime)'] }

[lints.clippy]
arithmetic-side-effects = "deny"
expect-used = "deny"
indexing-slicing = "deny"
manual_inspect = "allow"
result_large_err = "allow"
type_complexity = "allow"
unwrap-used = "deny"
useless_conversion = "allow"

[dependencies]
pallet-subtensor = { path = "../pallets/subtensor", default-features = false, features = ["std"] }
frame-support = { git = "https://github.com/opentensor/polkadot-sdk.git", rev = "fb1dd20df37710800aa284ac49bb26193d5539ee", default-features = false, features = ["std"] }
frame-system = { git = "https://github.com/opentensor/polkadot-sdk.git", rev = "fb1dd20df37710800aa284ac49bb26193d5539ee", default-features = false, features = ["std"] }
sp-core = { git = "https://github.com/opentensor/polkadot-sdk.git", rev = "fb1dd20df37710800aa284ac49bb26193d5539ee", default-features = false, features = ["std"] }
sp-io = { git = "https://github.com/opentensor/polkadot-sdk.git", rev = "fb1dd20df37710800aa284ac49bb26193d5539ee", default-features = false, features = ["std"] }
sp-runtime = { git = "https://github.com/opentensor/polkadot-sdk.git", rev = "fb1dd20df37710800aa284ac49bb26193d5539ee", default-features = false, features = ["std"] }
sp-std = { git = "https://github.com/opentensor/polkadot-sdk.git", rev = "fb1dd20df37710800aa284ac49bb26193d5539ee", default-features = false, features = ["std"] }
codec = { package = "parity-scale-codec", version = "3.7.5", default-features = false, features = ["derive", "std"] }
scale-info = { version = "2.11.2", default-features = false, features = ["derive", "std"] }
pallet-balances = { git = "https://github.com/opentensor/polkadot-sdk.git", rev = "fb1dd20df37710800aa284ac49bb26193d5539ee", default-features = false, features = ["std"] }
pallet-scheduler = { git = "https://github.com/opentensor/polkadot-sdk.git", rev = "fb1dd20df37710800aa284ac49bb26193d5539ee", default-features = false, features = ["std"] }
pallet-preimage = { git = "https://github.com/opentensor/polkadot-sdk.git", rev = "fb1dd20df37710800aa284ac49bb26193d5539ee", default-features = false, features = ["std"] }
pallet-drand = { path = "../pallets/drand", default-features = false, features = ["std"] }
pallet-subtensor-swap = { path = "../pallets/swap", default-features = false, features = ["std"] }
pallet-crowdloan = { path = "../pallets/crowdloan", default-features = false, features = ["std"] }
pallet-subtensor-proxy = { path = "../pallets/proxy", default-features = false, features = ["std"] }
pallet-subtensor-utility = { path = "../pallets/utility", default-features = false, features = ["std"] }
pallet-shield = { path = "../pallets/shield", default-features = false, features = ["std"] }
subtensor-runtime-common = { path = "../common", default-features = false, features = ["std"] }
subtensor-swap-interface = { path = "../pallets/swap-interface", default-features = false, features = ["std"] }
share-pool = { path = "../primitives/share-pool", default-features = false, features = ["std"] }
safe-math = { path = "../primitives/safe-math", default-features = false, features = ["std"] }
log = { version = "0.4.21", default-features = false, features = ["std"] }
approx = "0.5"
sp-tracing = { git = "https://github.com/opentensor/polkadot-sdk.git", rev = "fb1dd20df37710800aa284ac49bb26193d5539ee", default-features = false, features = ["std"] }
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "=0.3.18", features = ["fmt", "env-filter"] }
rand = { version = "0.10.0", default-features = false, features = ["std", "thread_rng"] }
hex-literal = "0.4.1"

[patch.crates-io]
w3f-bls = { git = "https://github.com/opentensor/bls", branch = "fix-no-std" }
